fixing contrast erros with links

--- a/lesson_2/css/small.css
+++ b/lesson_2/css/small.css
@@ -34,6 +34,9 @@ footer {
  a:visited {
     color:black
 }
+div a:visited {
+    color:darkred
+}
 /*img{
     
     display: block;
